[metadata]
name = km3buu
version = attr: km3buu.version
description = "GiBUU neutrino generator tool for KM3NeT"
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://git.km3net.de/simulation/km3buu
author = Johannes Schumann
author_email = jschumann@km3net.de
maintainer = Johannes Schumann
maintainer_email = jschumann@km3net.de
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
keywords =
    neutrino
    generator
    physics
    HEP
    oscillation

[options]
packages = find:
install_requires =
    setuptools_scm
    numpy==1.23.5
    numba==0.56.4
    scipy
    spython
    thepipe
    particle
    click
    f90nml
    uproot>=4.0.0,<5.0.0
    awkward>=1.4.0,<2.0.0
    pandas
    mendeleev
    proposal>=7.5.1
python_requires = >=3.6
include_package_data = True
package_dir =
    =.

[options.packages.find]
where = .

[options.extras_require]
all =
    docopt
    type-docopt
    tqdm
dev =
    numpydoc
    pydocstyle
    pytest
    pytest-cov
    pytest-flake8
    pytest-pylint
    pytest-watch
    sphinx-rtd-theme
    sphinx>=3.0.0
    sphinxcontrib-napoleon
    sphinxcontrib-programoutput
    sphinxcontrib-websupport
    sphinx-autoapi
    setuptools_scm
    yapf>=0.25
    km3net-testdata>=0.2.11
    km3io

[options.entry_points]
console_scripts =
    km3buu = km3buu.cmd:main

[options.package_data]
* = *.mplstyle, *.py.typed

[bdist_wheel]
universal = 1

[tool:pytest]
junit_family = xunit2
addopts = -vv -rs -Wd
testpaths =
    tests

[check-manifest]
ignore =
    km3buu/version.py

[tool:isort]
profile = black
multi_line_output = 3

